crates/rascal/src/snapshots/rascal__tests__all_samples@AnExtendingInterface.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2_classes/AnExtendingInterface.as
---
initializer: ~
extra_modules:
  - - AnEmptyInterface
    - actions:
        - ConstantPool: []
        - Push:
            - String: _global
        - GetVariable
        - Push:
            - String: AnEmptyInterface
        - GetMember
        - Not
        - Not
        - If: loc0000
        - Push:
            - String: _global
        - GetVariable
        - Push:
            - String: AnEmptyInterface
        - DefineFunction:
            name: ""
            params: []
            actions:
              actions: []
              label_positions: {}
        - SetMember
        - Pop
      label_positions:
        loc0000: 13
  - - AnExtendingInterface
    - actions:
        - ConstantPool: []
        - Push:
            - String: _global
        - GetVariable
        - Push:
            - String: AnExtendingInterface
        - GetMember
        - Not
        - Not
        - If: loc0000
        - Push:
            - String: _global
        - GetVariable
        - Push:
            - String: AnExtendingInterface
        - DefineFunction:
            name: ""
            params: []
            actions:
              actions: []
              label_positions: {}
        - SetMember
        - Push:
            - String: _global
        - GetVariable
        - Push:
            - String: AnEmptyInterface
        - GetMember
        - Push:
            - Integer: 1
            - String: _global
        - GetVariable
        - Push:
            - String: AnExtendingInterface
        - GetMember
        - ImplementsOp
        - Pop
      label_positions:
        loc0000: 22
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
