crates/rascal/src/snapshots/rascal__tests__all_samples@DynamicClass.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2_classes/DynamicClass.as
---
initializer: ~
extra_modules:
  - - DynamicClass
    - actions:
        - ConstantPool: []
        - Push:
            - String: _global
        - GetVariable
        - Push:
            - String: DynamicClass
        - GetMember
        - Not
        - Not
        - If: loc0000
        - Push:
            - String: _global
        - GetVariable
        - Push:
            - String: DynamicClass
        - DefineFunction:
            name: ""
            params: []
            actions:
              actions: []
              label_positions: {}
        - StoreRegister: 1
        - SetMember
        - Push:
            - Register: 1
            - String: prototype
        - GetMember
        - StoreRegister: 2
        - Pop
        - Push:
            - Integer: 1
            - "Null"
            - String: DynamicClass
        - GetVariable
        - Push:
            - String: prototype
        - GetMember
        - Push:
            - Integer: 3
            - String: ASSetPropFlags
        - CallFunction
        - Pop
      label_positions:
        loc0000: 24
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
