crates/rascal/src/snapshots/rascal__tests__all_samples@NotMtascStyle.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2_classes/NotMtascStyle.as
---
initializer: ~
extra_modules:
  - - NotMtascStyle
    - actions:
        - ConstantPool:
            - Not actually the main method!
        - Push:
            - String: _global
        - GetVariable
        - Push:
            - String: NotMtascStyle
        - GetMember
        - Not
        - Not
        - If: loc0000
        - Push:
            - String: _global
        - GetVariable
        - Push:
            - String: NotMtascStyle
        - DefineFunction:
            name: ""
            params: []
            actions:
              actions: []
              label_positions: {}
        - StoreRegister: 1
        - SetMember
        - Push:
            - Register: 1
            - String: prototype
        - GetMember
        - StoreRegister: 2
        - Pop
        - Push:
            - Register: 2
            - String: main
        - DefineFunction:
            name: ""
            params: []
            actions:
              actions:
                - Push:
                    - Constant: 0
                - Trace
              label_positions: {}
        - SetMember
        - Push:
            - Integer: 1
            - "Null"
            - String: NotMtascStyle
        - GetVariable
        - Push:
            - String: prototype
        - GetMember
        - Push:
            - Integer: 3
            - String: ASSetPropFlags
        - CallFunction
        - Pop
      label_positions:
        loc0000: 27
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
