crates/rascal/src/snapshots/rascal__tests__all_samples@assign_variable_and_trace.as.snap
---
source: crates/rascal/src/tests.rs
expression: result
input_file: samples/as2/assign_variable_and_trace.as
---
initializer:
  actions:
    - ConstantPool:
        - message
        - Hello World
    - Push:
        - Constant: 0
        - Constant: 1
    - DefineLocal
    - Push:
        - Constant: 0
    - GetVariable
    - Trace
  label_positions: {}
extra_modules: []
compile_options:
  swf_version: 15
  optimizations:
    fold_constants: true
    promote_variables_to_registers: true
custom_pcodes: []
